2012-08-26  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips.h (AVOID_CCMODE_COPIES): Update rationale for
	definition.
	* config/mips/mips.c (machine_function): Add next_fcc.
	(mips_output_move): Remove handling of fcc moves.
	(mips_allocate_fcc): New function.
	(mips_emit_compare, mips_expand_vcondv2sf): Use it.
	(mips_hard_regno_mode_ok_p): Restrict CCmode to ST registers.
	Remove special case for CCmode reloads.
	(mips_expand_builtin_compare_1): Use mips_allocate_fcc and treat
	the result a fixed operand.
	* config/mips/mips.md (move_type): Remove lui_movf.
	(type, length): Remove references to it.
	(movcc, reload_incc, reload_outcc): Delete.

2012-08-26  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips.c (mips_has_long_branch_p): New function,
	split out from...
	(mips_expand_ghost_gp_insns): ...here.  Look inside sequences.

2012-08-26  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips.c (r10k_safe_mem_expr_p): Use get_inner_reference.

2012-08-26  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips.c (mips_rtx_costs): Add costs for CINS.

2012-08-26  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips.c (mips_rtx_costs): Add missing COSTS_N_INSNS
	to the size cost of multiplication.

2012-08-26  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (Specific): Clarify what needs to be added to
	this section.

2012-08-26  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* doc/tm.texi.in (Misc): Move descriptions of NO_DOLLAR_IN_LABEL
	and NO_DOT_IN_LABEL from here...
	(Label Output): ...to here.
	* doc/tm.texi: Regenerate.
			
2012-08-26  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/invoke.texi (C++ Dialect Options): Add missing space.

2012-08-25  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/54088
	* jump.c (delete_related_insns): Robustify latest change.

2012-08-25  Ricardo Catalinas Jiménez  <jimenezrick@gmail.com>
